--- a/packages/client/__tests__/comment.html
+++ b/packages/client/__tests__/comment.html
@@ -11,7 +11,7 @@
       import { commentCount } from '../dist/comment.js';
 
       commentCount({
-        serverURL: 'https://ralinejs.comment.lithub.cc',
+        // serverURL: 'https://ralinejs.comment.lithub.cc',
         path: '/',
       });
     </script>
