--- a/packages/client/__tests__/highlighter.html
+++ b/packages/client/__tests__/highlighter.html
@@ -19,7 +19,7 @@
 
       init({
         el: '#raline',
-        serverURL: 'https://ralinejs.comment.lithub.cc',
+        // serverURL: 'https://ralinejs.comment.lithub.cc',
         path: '/',
         lang: 'en-US',
         highlighter: (code, lang) => {
