--- a/packages/client/__tests__/init.html
+++ b/packages/client/__tests__/init.html
@@ -15,7 +15,7 @@
 
       init({
         el: '#raline',
-        serverURL: 'https://ralinejs.comment.lithub.cc',
+        // serverURL: 'https://ralinejs.comment.lithub.cc',
         lang: 'en-US',
         path: '/',
         pageview: true,
