--- a/packages/client/__tests__/pageview.html
+++ b/packages/client/__tests__/pageview.html
@@ -11,7 +11,7 @@
       import { pageviewCount } from '../dist/pageview.js';
 
       pageviewCount({
-        serverURL: 'https://ralinejs.comment.lithub.cc',
+        // serverURL: 'https://ralinejs.comment.lithub.cc',
         path: '/',
       });
     </script>
