--- a/packages/client/__tests__/widget.html
+++ b/packages/client/__tests__/widget.html
@@ -20,19 +20,19 @@
 
       RecentComments({
         el: '#recent-comment',
-        serverURL: 'https://ralinejs.comment.lithub.cc',
+        // serverURL: 'https://ralinejs.comment.lithub.cc',
         count: 10,
       });
 
       UserList({
         el: '#user-list',
-        serverURL: 'https://ralinejs.comment.lithub.cc',
+        // serverURL: 'https://ralinejs.comment.lithub.cc',
         count: 10,
       });
 
       UserList({
         el: '#user-wall',
-        serverURL: 'https://ralinejs.comment.lithub.cc',
+        // serverURL: 'https://ralinejs.comment.lithub.cc',
         count: 50,
         mode: 'wall',
       });
