--- a/packages/client/__tests__/init.html
+++ b/packages/client/__tests__/init.html
@@ -21,8 +21,8 @@
         pageview: true,
         reactions: true,
         emoji: [
-          '//unpkg.com/@raline/emojis@1.1.0/bilibili',
-          '//unpkg.com/@raline/emojis@1.1.0/qq',
+          '//unpkg.com/@waline/emojis@1.1.0/bilibili',
+          '//unpkg.com/@waline/emojis@1.1.0/qq',
         ],
       });
     </script>
